name:                  server
version:               0.0.0
synopsis:              react-tutorial web server
description:           Haskell server for Facebook's react-tutorial.
author:                Alexander Berntsen
maintainer:            alexander@plaimi.net
copyright:             (c) Alexander Berntsen 2016
category:              Web
extra-source-files:    README.md
cabal-version:         >=1.10
build-type:            Simple

executable server
  main-is:             server.hs
  build-depends:       base         >=4.8  && <4.9,
                       aeson        >=0.11 && <0.12,
                       aeson-pretty >=0.7  && <0.8,
                       bytestring   >=0.10 && <0.11,
                       scotty       >=0.11 && <0.12,
                       time         >=1.5  && <1.6,
                       transformers >=0.4  && <0.5
  default-language:    Haskell2010
